# git-clean

./: .gitignore  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  goreleaser.yml  release-please.yml
src/: branches.rs  cli.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  options.rs  ui.rs
tests/: deletion.rs  local.rs  remote.rs  support.rs  tests.rs  utility.rs
