[package]
name = "git-clean"
version = "0.8.0"
authors = ["Matt Casper <matthewvcasper@gmail.com>"]
license = "MIT"
description = "A tool for cleaning old git branches."
documentation = "https://github.com/mcasper/git-clean"
homepage = "https://github.com/mcasper/git-clean"
repository = "https://github.com/mcasper/git-clean"
autotests = false
edition = "2021"
rust-version = "1.74"

[dependencies]
clap = "4.5"
regex = "1.12"

[dev-dependencies]
tempfile = "3.17"

[[test]]
name = "tests"
