[package]
name = "git-clean"
version = "0.9.0"
authors = ["Matt Casper <matthewvcasper@gmail.com>"]
license = "MIT"
description = "A tool for cleaning old git branches."
documentation = "https://github.com/aaronflorey/git-clean"
homepage = "https://github.com/aaronflorey/git-clean"
repository = "https://github.com/aaronflorey/git-clean"
autotests = false
edition = "2021"
rust-version = "1.74"

[dependencies]
clap = "4.5"
regex = "1.12"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.17"

[[test]]
name = "tests"
